--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,8 @@
     ],
     "require": {
         "php": "^7.4",
-        "larapack/dd": "^1.1",
         "spatie/temporary-directory": "^1.2",
-        "symfony/process": "^5.0"
+        "symfony/process": "^4.0|^5.0"
     },
     "require-dev": {
         "symfony/var-dumper": "^4.3",
