--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     ],
     "require": {
         "php": "^7.4",
+        "spatie/macroable": "^1.0",
         "spatie/temporary-directory": "^1.2",
         "symfony/process": "^4.0|^5.0"
     },
