--- a/tests/docker/dockerfile
+++ b/tests/docker/dockerfile
@@ -6,7 +6,7 @@ RUN apt-get update && apt-get install -y openssh-server sed nano
 
 RUN mkdir /var/run/sshd
 
-COPY keys /etc/ssh
+COPY baseSshKeys /etc/ssh
 RUN chmod 600 /etc/ssh/ssh_host_dsa_key
 RUN chmod 600 /etc/ssh/ssh_host_ecdsa_key
 RUN chmod 600 /etc/ssh/ssh_host_ed25519_key
