--- a/composer.json
+++ b/composer.json
@@ -44,7 +44,7 @@
     },
     "scripts": {
         "test": "vendor/bin/phpunit",
-        "build-docker": "docker build -t spatie/dock ./tests/docker",
+        "build-docker": "docker build -t spatie/docker ./tests/docker",
 
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
     },
