--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -33,6 +33,12 @@ jobs:
 
       - name: Install dependencies
         run: composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction --no-suggest
+        
+      
+      - name: Set permissions for keys
+        run: |
+          chmod 600 tests/keys/spatie_docker_package_id_rsa
+          chmod 600 tests/keys/spatie_docker_package_id_rsa.pub
 
       - name: Execute tests
         run: vendor/bin/phpunit
