--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -17,6 +17,9 @@ jobs:
     steps:
       - name: Checkout code
         uses: actions/checkout@v1
+      
+      - name: Cat
+        run: cat  ~/.ssh/known_hosts
 
       - name: Cache dependencies
         uses: actions/cache@v1
