--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -38,6 +38,9 @@ jobs:
         run: |
           chmod 700 tests/keys/spatie_docker_package_id_rsa
           chmod 700 tests/keys/spatie_docker_package_id_rsa.pub
+          
+      - name: Patch SSH Daemon
+        run: sed -ri 's/^#?StrictHostKeyChecking yes/StrictHostKeyChecking no/g' /etc/ssh/sshd_config
 
       - name: Execute tests
         run: vendor/bin/phpunit
