--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -27,10 +27,10 @@ jobs:
           chmod 700 tests/keys/spatie_docker_package_id_rsa.pub
           
       - name: Patch SSH Daemon
-        run: sudo sed -ri 's/^#?StrictHostKeyChecking yes/StrictHostKeyChecking no/g' /etc/ssh/sshd_config
+        run: sudo sed -ri 's/^#?   StrictHostKeyChecking ask/StrictHostKeyChecking no/g' /etc/ssh/ssh_config
         
       - name: Cat SSH config
-        run: cat /etc/ssh/sshd_config
+        run: cat /etc/ssh/ssh_config
 
       - name: Cache dependencies
         uses: actions/cache@v1
