--- a/composer.json
+++ b/composer.json
@@ -22,12 +22,12 @@
         }
     ],
     "require": {
-        "php": "^7.4",
+        "php": "^7.4 || ^8.0",
         "spatie/macroable": "^1.0",
         "symfony/process": "^4.0|^5.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.2",
+        "phpunit/phpunit": "^8.2 || ^9.0",
         "spatie/ssh": "dev-master",
         "symfony/var-dumper": "^4.3"
     },
