--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     "require": {
         "php": "^7.4|^8.0",
         "spatie/macroable": "^1.0",
-        "symfony/process": "^5.3"
+        "symfony/process": "^5.3|^6.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^9.4",
