--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,7 @@
         "symfony/process": "^5.3|^6.0"
     },
     "require-dev": {
+        "pestphp/pest": "^1.22",
         "phpunit/phpunit": "^9.4",
         "spatie/ssh": "^1.7.0",
         "symfony/var-dumper": "^5.3"
@@ -42,11 +43,14 @@
         }
     },
     "scripts": {
-        "test": "chmod -R 700 tests/keys && vendor/bin/phpunit",
+        "test": "chmod -R 700 tests/keys && vendor/bin/pest",
         "build-docker": "docker build -t spatie/docker ./tests/docker",
-        "test-coverage": "vendor/bin/phpunit --coverage-html coverage"
+        "test-coverage": "vendor/bin/pest --coverage-html coverage"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     }
 }
