--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,7 @@
     ],
     "require": {
         "php": "^7.4|^8.0",
-        "spatie/macroable": "^1.0",
+        "spatie/macroable": "^1.0|^2.0",
         "symfony/process": "^5.3|^6.0"
     },
     "require-dev": {
